# routeur

./: .gitignore  DATASETS.md  README.md  modal_train.py  pyproject.toml
.github/workflows/: ci.yml
configs/: levels.json  models.json  models_lmarena.json
data/: README.md  example_traces.jsonl  example_train.jsonl
deploy/: retrain.env.example  routeur-retrain.service  routeur-retrain.timer
models/: profiles.json
models/fast-router-v3/: README.md  evaluation.json  fast_router.json
models/semantic-router-tiny-v1/: README.md  evaluation.json  onnx_router.json  router_model.json
models/semantic-router-v1/: README.md  evaluation.json  onnx_router.json  router_model.json
paper/: routeur_paper.tex
routeur/: __init__.py  calibration.py  capabilities.py  cli.py  fast_model.py  heuristics.py  hf_data.py  io.py  labels.py  metrics.py  modeling.py  objective_oracle.py  onnx_model.py  policy.py  router.py  schema.py  synthetic.py  tasks.py  tokenization.py
scripts/: annotate_prompts.py  benchmark_latency.py  bootstrap_continuous.sh  build_hf_data.py  build_new_datasets.py  build_objective_oracle.py  build_targeted_synthetic.py  continuous_retrain.py  export_onnx_router.py  live_training.py  prepare_training_data.py  record_retrain_state.py  run_h100_experiments.py  select_annotation_rows.py  select_best_runs.py  sync_lmarena.py  train_fast_router.py
tests/: test_fast_model.py  test_labels.py  test_metrics.py  test_new_datasets.py  test_objective_oracle.py  test_router.py  test_synthetic.py  test_tasks.py  test_tokenization.py
