[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routeur"
version = "0.1.0"
description = "Prompt router that selects concrete inference models from task and difficulty."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
train = [
  "accelerate>=1.0",
  "datasets>=2.20",
  "scikit-learn>=1.5",
  "torch>=2.4",
  "transformers>=4.44",
  "zstandard>=0.22",
]
serve = [
  "fastapi>=0.115",
  "sentencepiece>=0.2",
  "uvicorn>=0.30",
  "transformers>=4.44",
  "torch>=2.4",
]
fast = [
  "scikit-learn>=1.5",
]
modal = [
  "modal>=1.0",
]
monitor = [
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
routeur = "routeur.cli:main"

[tool.setuptools.packages.find]
include = ["routeur*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
